# codesign-mcdp

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  build_notebooks.py  pyproject.toml
.github/workflows/: test.yml
codesign/: __init__.py  antichains.py  composition.py  diagram.py  dp.py  dynamic.py  mcdpl.py  module.py  online.py  online_codesign.py  posets.py  primitives.py  sequential.py  solver.py  state.py  sugar.py  system.py  temporal.py  uncertainty.py  vector_dp.py  viz.py
docs/manual/: Makefile  README.md  codesign-mcdp-manual.tex  references.bib
examples/: 01_drone.py  02_integer_optimization.py  03_auv_seabed.py  04_uncertain_and_ode.py  05_visualize_kleene.py  06_drone_mcdpl_syntax.py  07_drone_modular.py  08_vehicle_modular.py  09_robotic_arm.py  10_solver_trace.py  11_uncertain_drone.py  12_stochastic_drone.py  13_microgrid.py  14_online_fleet.py  15_bioprocess.py  16_online_doe.py  17_car_codesign.py  17_full_car.py  18_metabolic_switching.py  19_rover_modules.py  20_sequential_codesign.py  21_reconfigurable_robot.py  22_online_feedback_codesign.py  23_formula1_season.py  24_car_catalog_codesign.py  25_online_paper_benchmarks.py
notebooks/: 01_drone.ipynb  02_integer_optimization.ipynb  03_auv_seabed.ipynb  04_uncertain_and_ode.ipynb  05_visualize_kleene.ipynb  06_drone_mcdpl_syntax.ipynb  07_drone_modular.ipynb  08_vehicle_modular.ipynb  09_robotic_arm.ipynb  10_solver_trace.ipynb  11_uncertain_drone.ipynb  12_stochastic_drone.ipynb  13_microgrid.ipynb  14_online_fleet.ipynb  15_bioprocess.ipynb  16_online_doe.ipynb  17_car_codesign.ipynb  18_metabolic_switching.ipynb  19_rover_modules.ipynb  20_sequential_codesign.ipynb  21_reconfigurable_robot.ipynb  22_online_feedback_codesign.ipynb  23_formula1_season.ipynb  24_car_catalog_codesign.ipynb  25_online_paper_benchmarks.ipynb  README.md
tests/: test_formula1.py  test_online_bound_perf.py  test_online_linear_parametric.py  test_online_tier1.py  test_sequential.py  test_smoke.py  test_temporal_dynamic.py  test_validation.py  test_vector_online.py
